# Asteroids-SDL

./: CMakeLists.txt
include/: clock.h  entity.h  game.h  math.h  model.h  world.h
res/: test.txt
src/: clock.cpp  entity.cpp  game.cpp  main.cpp  math.cpp  model.cpp  world.cpp
